--- a/src/component/signInUp/SignInUp.scss
+++ b/src/component/signInUp/SignInUp.scss
@@ -2,10 +2,9 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: 0.87em;
-  font-weight: bold;
-  font-family: SemiBoldMonaSans;
+  justify-content: end;
+  font-size: 1em;
+  font-family: "SemiBoldMonaSans";
   &__login {
     padding: 20px;
     color: #0d0c22;
