--- a/src/component/footer/Footer.scss
+++ b/src/component/footer/Footer.scss
@@ -11,7 +11,9 @@
         margin: 10px;
         font-family: "SemiBoldMonaSans";
         .footer-v2__links{
-            font-size: 18px;
+            font-size: 16px;
+            font-weight: 600;
+            
         }
         .footer-v2__social-links{
             display: flex;
