--- a/src/component/navigator/Navigator.scss
+++ b/src/component/navigator/Navigator.scss
@@ -6,10 +6,11 @@
   align-items: center;
   &__nav {
     font-family: "MediumMonaSans";
-    margin-right: 3em;
+    margin-right: 2vw;
     text-align: center;
     color: #0d0c22;
     text-decoration: none;
     font-size: 1em;
+    
   }
 }
