--- a/src/component/infoCard/InfoCard.scss
+++ b/src/component/infoCard/InfoCard.scss
@@ -2,7 +2,6 @@
   height: 350px;
   width: 273px;
   margin: 0 20px;
-  border-radius: 35px;
   font-family: "SemiBoldMonaSans";
   &__info {
     position: absolute;
@@ -17,7 +16,7 @@
       display: flex;
       list-style: none;
       li {
-        transform: translateX(-25px);
+        transform: translateX(15px) translateY(10px);
         border: 0.5px solid rgba(255, 255, 255, 0.743);
         padding: 5px 12px;
         margin: 0 2px;
@@ -31,6 +30,7 @@
     height: 100%;
     img {
       height: 100%;
+      border-radius: 35px;
     }
   }
 }
