--- a/src/component/footer/Footer.scss
+++ b/src/component/footer/Footer.scss
@@ -1,44 +1,40 @@
-.footer-v2__container {
-  padding: 0px 100px;
-  .footer-v2__upper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: row;
-    padding: 20px 0px 10px;
-    row-gap: 0;
-    font-size: 20px;
-    margin: 10px;
-    font-family: "SemiBoldMonaSans";
-    .footer-v2__links {
-      font-size: 18px;
+.footer {
+  padding: 3em;
+  &__upper {
+    width: 100%;
+    margin-bottom: 4em;
+    &__logo {
+      display: flex;
+      justify-content: start;
+    }
+    &__icons {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 1.5em;
+    }
+  }
+  &__lower {
+    width: 100%;
 
-      .footer-v2__container {
-        padding: 0px 100px;
-        .footer-v2__upper {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          flex-direction: row;
-          padding: 20px 0px 10px;
-          row-gap: 0;
-          font-size: 20px;
-          margin: 10px;
-          font-family: "SemiBoldMonaSans";
-          .footer-v2__links {
-            font-size: 16px;
-            font-weight: 600;
-          }
-          .footer-v2__social-links {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            width: 13%;
-            div {
-              cursor: pointer;
-            }
-          }
-        }
+    &__privacy {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &__tag {
+        color: #6e6d7a;
+        font-family: "RegularMonaSans";
+      }
+    }
+
+    &__about {
+      display: flex;
+      justify-content: space-between;
+
+      &__tag {
+        color: #6e6d7a;
+        font-family: "RegularMonaSans";
       }
     }
   }
