--- a/src/component/footer/Footer.scss
+++ b/src/component/footer/Footer.scss
@@ -1,6 +1,6 @@
-
 .footer {
-  padding: 3em;
+  padding: 0 12em;
+  padding-bottom: 4em;
   &__upper {
     width: 100%;
     margin-bottom: 4em;
@@ -40,4 +40,3 @@
     }
   }
 }
-
