--- a/src/component/workart/styles.scss
+++ b/src/component/workart/styles.scss
@@ -1,9 +1,10 @@
 .workart-card {
   width: 100%;
-  height: 19em;
+  height: 18em;
   border-radius: 10px;
   box-shadow: none;
   background-size: cover;
+  background-position: center center;
   margin: 2em 0 0.5em 0;
 }
 
@@ -62,5 +63,64 @@
         margin-right: 2px;
       }
     }
+  }
+}
+
+@media only screen and (max-width: 2000px) {
+  .workart-card {
+    height: 22em;
+  }
+}
+@media only screen and (max-width: 1880px) {
+  .workart-card {
+    height: 18em;
+  }
+}
+@media only screen and (max-width: 1524px) {
+  .workart-card {
+    height: 14em;
+  }
+  .info {
+    &__right {
+      &__tag {
+        font-size: 0.6em;
+        padding: 2px 2px 0px 2px;
+      }
+    }
+
+    &__left {
+      &__favorites {
+        &__subInfo {
+          font-size: 0.9em;
+        }
+        &__icon {
+          font-size: 0.9em;
+        }
+      }
+      &__seens {
+        &__subInfo {
+          font-size: 0.9em;
+        }
+        &__icon {
+          font-size: 0.9em;
+        }
+      }
+    }
+  }
+}
+@media only screen and (max-width: 1280px) {
+  .workart-card {
+    height: 15em;
+  }
+}
+@media only screen and (max-width: 1180px) {
+  .workart-card {
+    height: 17em;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .workart-card {
+    height: 15.5em;
   }
 }
