--- a/src/component/footer/Footer.scss
+++ b/src/component/footer/Footer.scss
@@ -1,9 +1,11 @@
 .footer {
+  height: 35vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0 12em;
-  padding-bottom: 4em;
   &__upper {
     width: 100%;
-    margin-bottom: 4em;
     &__logo {
       display: flex;
       justify-content: start;
