--- a/src/component/changeTabCreator/ChangeTabCreator.scss
+++ b/src/component/changeTabCreator/ChangeTabCreator.scss
@@ -8,7 +8,7 @@
   padding: 2em;
   &__work,
   &__liked,
-  &__collection,
+  &__collections,
   &__about {
     color: black;
     padding: 0.7em 1em;
