--- a/src/sections/swiper/SwiperInfo.scss
+++ b/src/sections/swiper/SwiperInfo.scss
@@ -1,8 +1,22 @@
 .info-scroller {
   width: 100%;
-  margin: 3em 0;
-  height: 65vh;
-  transform: translateY(-2.5em);
+  margin: 1em 0;
+  &__title {
+    // width: 30%;
+    // font-family: "LightMonaSans";
+    // text-align: center;
+    // margin-left: 35vw;
+    // margin-bottom: 0.6em;
+    // font-size: 1.5em;
+    // padding: 1em;
+    // color: white;
+    // border-radius: 100px;
+    // background-color: rgb(225, 163, 186);
+    font-family: "UltraLightMonaSans";
+    text-align: center;
+    margin-bottom: 0.6em;
+    font-size: 3.2em;
+  }
 }
 
 .info-scroller__inner {
