--- a/src/component/signInUp/SignInUp.scss
+++ b/src/component/signInUp/SignInUp.scss
@@ -9,6 +9,7 @@
     padding: 20px;
     color: #0d0c22;
     text-decoration: none;
+    text-wrap: nowrap;
   }
   &__signup {
     padding: 0px 25px;
@@ -20,5 +21,6 @@
     text-decoration: none;
     height: 50px;
     border-radius: 100px;
+    text-wrap: nowrap;
   }
 }
