--- a/src/component/infoCard/InfoCard.scss
+++ b/src/component/infoCard/InfoCard.scss
@@ -1,7 +1,6 @@
 .hero-marquee-item {
   height: 350px;
-  width: 273px;
-  margin: 0 20px;
+  width: 100%;
   font-family: "SemiBoldMonaSans";
   &__info {
     position: absolute;
