--- a/src/component/category/Category.scss
+++ b/src/component/category/Category.scss
@@ -1,10 +1,11 @@
 .category {
   width: 250px;
-  margin: 0 1em;
+  height: 300px;
   text-decoration: none;
   &__image {
-    height: 50%;
-    width: fit-content;
+    width: 250px;
+    height: 180px;
+
     border-radius: 8px;
     border: 2px solid white;
     box-shadow: 3.5px -3px rgb(226, 228, 213), 5.5px -5px white,
