--- a/src/sections/categorySlider/CategorySlider.scss
+++ b/src/sections/categorySlider/CategorySlider.scss
@@ -1,47 +1,12 @@
 .category-scroller {
-  width: 100%;
-  margin: 3em 0;
-  height: 40vh;
-}
-
-.category-scroller__inner {
-  padding-block: 1rem;
-  display: flex;
-  flex-wrap: wrap;
-}
-.category-scroller[data-animated="true"] {
-  overflow: hidden;
-}
-
-.category-scroller[data-animated="true"] .category-scroller__inner {
-  width: max-content;
-  flex-wrap: nowrap;
-  animation: scroll var(--_animation-duration, 40s)
-    var(--_animation-direction, forwards) linear infinite;
-}
-
-.category-scroller[data-animated="true"] .category-scroller__inner:hover {
-  animation-play-state: paused;
-}
-
-.category-scroller[data-direction="right"] {
-  --_animation-direction: reverse;
-}
-
-.category-scroller[data-direction="left"] {
-  --_animation-direction: forwards;
-}
-
-.category-scroller[data-speed="fast"] {
-  --_animation-duration: 20s;
-}
-
-.category-scroller[data-speed="slow"] {
-  --_animation-duration: 60s;
-}
-
-@keyframes scroll {
-  to {
-    transform: translate(calc(-50% - 0.5rem));
+  margin-top: 4em;
+  width: 97vw;
+  padding-left: 3vw;
+  &__inner {
+    .slick-slide {
+      div {
+        height: 300px;
+      }
+    }
   }
 }
