--- a/src/component/category/Category.scss
+++ b/src/component/category/Category.scss
@@ -4,7 +4,8 @@
   text-decoration: none;
   &__image {
     width: 250px;
-    height: 180px;
+    height: 200px;
+    padding: auto;
 
     border-radius: 8px;
     border: 2px solid white;
