--- a/src/sections/categorySlider/CategorySlider.scss
+++ b/src/sections/categorySlider/CategorySlider.scss
@@ -5,7 +5,9 @@
   &__inner {
     .slick-slide {
       div {
+        padding-top: 1em;
         height: 300px;
+        display: flex;
       }
     }
   }
