--- a/src/component/header/Header.scss
+++ b/src/component/header/Header.scss
@@ -5,3 +5,20 @@
   align-items: center;
   justify-content: center;
 }
+
+@media only screen and (max-width: 2000px) {
+}
+@media only screen and (max-width: 1880px) {
+}
+@media only screen and (max-width: 1430px) {
+  
+}
+@media only screen and (max-width: 1302px) {
+}
+@media only screen and (max-width: 1000px) {
+  
+}
+
+@media only screen and (max-width: 480px) {
+}
+
