--- a/src/component/workartInfo/WorkartInfo.scss
+++ b/src/component/workartInfo/WorkartInfo.scss
@@ -7,9 +7,13 @@
     justify-content: space-between;
 
     &__name {
+      width: 5em;
       margin-left: 5px;
-      text-wrap: wrap;
+      text-wrap: nowrap;
       font-family: "MediumMonaSans";
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis ;
     }
     &__tag {
       font-family: "BoldMonaSans";
@@ -26,6 +30,7 @@
   }
   &__left {
     display: flex;
+
     &__favorites {
       margin: 0 10px;
       display: flex;
@@ -86,3 +91,6 @@
     }
   }
 }
+
+
+
