--- a/src/sections/workartSection/Workartsection.scss
+++ b/src/sections/workartSection/Workartsection.scss
@@ -24,3 +24,12 @@
     transition: all 0.3s ease-in-out;
   }
 }
+
+
+@media only screen and (max-width: 300px) {
+  .workart-section {
+    padding:1.5em;
+  }
+ }
+
+
