--- a/src/sections/categorySlider/CategorySlider.scss
+++ b/src/sections/categorySlider/CategorySlider.scss
@@ -5,9 +5,10 @@
   &__inner {
     .slick-slide {
       div {
-        padding-top: 1em;
+        padding-top: 2em;
         height: 300px;
         display: flex;
+        justify-content: center;
       }
     }
   }
