--- a/src/sections/swiper/SwiperInfo.scss
+++ b/src/sections/swiper/SwiperInfo.scss
@@ -9,6 +9,10 @@
   }
 }
 
+.slick-arrow.slick-next {
+  display: none !important;
+}
+
 @media only screen and (max-width: 380px) {
   .info-scroller {
     width: 97vw;
