--- a/src/sections/workartSection/Workartsection.scss
+++ b/src/sections/workartSection/Workartsection.scss
@@ -25,11 +25,25 @@
   }
 }
 
+@media only screen and (max-width: 1024px) {
+  .workart-section {
+    padding:2em;
+  }
+ }
+
+@media only screen and (max-width: 750px) {
+  .workart-section {
+    padding:3em;
+  }
+ }
+
 
 @media only screen and (max-width: 300px) {
   .workart-section {
     padding:1.5em;
   }
  }
+
+
 
 
