--- a/src/component/logo/Logo.scss
+++ b/src/component/logo/Logo.scss
@@ -3,7 +3,68 @@
   justify-content: center;
   align-items: center;
   &__logo {
-    height: 6em;
-    width: 6em;
+    height: 5.5em;
+    width: 5.5em;
+  }
+}
+
+@media only screen and (max-width: 2000px) {
+  .wrapper {
+    &__logo {
+      height: 5.5em;
+      width: 5.5em;
+    }
+  }
+}
+@media only screen and (max-width: 1880px) {
+  .wrapper {
+    &__logo {
+      height: 5.5em;
+      width: 5.5em;
+    }
+  }
+}
+@media only screen and (max-width: 1430px) {
+  .wrapper {
+    &__logo {
+      height: 5em;
+      width: 5em;
+    }
+  }
+}
+@media only screen and (max-width: 1302px) {
+  .wrapper {
+    &__logo {
+      height: 5em;
+      width: 5em;
+    }
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .wrapper {
+    &__logo {
+      height: 4em;
+      width: 4em;
+      margin-right: 1em;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .wrapper {
+    &__logo {
+      height: 4em;
+      width: 4em;
+      margin-right: 0em;
+    }
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .wrapper {
+    &__logo {
+      height: 4em;
+      width: 4em;
+    }
   }
 }
