--- a/src/component/randomColor/RandomColor.scss
+++ b/src/component/randomColor/RandomColor.scss
@@ -1,27 +1,27 @@
 @keyframes randomColor {
   0% {
-    background-color: #ff8080;
+    background-color: #ffc2e8;
   }
   15% {
-    background-color: #ffcf96;
+    background-color: #ffffaa;
   }
   30% {
-    background-color: #f6fdc3;
+    background-color: #d6ff89;
   }
   45% {
-    background-color: #cdfad5;
+    background-color: #8cffa1;
   }
   60% {
-    background-color: #aee2ff;
+    background-color: #8cffff;
   }
   75% {
-    background-color: #c3acd0;
+    background-color: #ff9fff;
   }
   90% {
-    background-color: #fcc8d1;
+    background-color: #ffc4ce;
   }
   100% {
-    background-color: #ffabab;
+    background-color: #ff3e74;
   }
 }
 
