--- a/src/component/header/Header.scss
+++ b/src/component/header/Header.scss
@@ -11,14 +11,17 @@
 @media only screen and (max-width: 1880px) {
 }
 @media only screen and (max-width: 1430px) {
-  
 }
-@media only screen and (max-width: 1302px) {
+@media only screen and (max-width: 992px) {
+  .header {
+    padding: 1em;
+  }
 }
-@media only screen and (max-width: 1000px) {
-  
+@media only screen and (max-width: 522px) {
+  .header {
+    padding: 0em;
+  }
 }
 
 @media only screen and (max-width: 480px) {
 }
-
