add Creator Page/artworks

--- a/src/pages/creator/creator-manage/CreatorManage.scss
+++ b/src/pages/creator/creator-manage/CreatorManage.scss
@@ -1,3 +1,10 @@
 .creatorManage {
   display: flex;
+  &--left {
+    width: fit-content;
+  }
+  &--right {
+    flex: 1;
+    overflow: hidden;
+  }
 }
