--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -4,6 +4,7 @@
   height: 100vh;
   &__side-bar {
     height: 100vh;
+
     &__media {
       width: 100%;
       height: 100%;
@@ -49,6 +50,7 @@
           &__input {
             margin-top: 0.5em;
             height: 4em !important;
+            border-radius: 12px;
           }
         }
         &__submit {
@@ -83,5 +85,58 @@ label.ant-form-item-required {
   font-size: 1.1em;
   &:before {
     display: none !important;
+  }
+}
+
+@media only screen and (max-width: 1004px) {
+  .login {
+  
+    &__side-bar {
+      position: relative;
+      filter: blur(5px);
+    }
+    &__form {
+      padding: 0 2em;
+      position: absolute;
+      top: 1%;
+      width: 100%;
+      &__container {
+        h3 {
+          font-size: 2em;
+          color: white;
+        }
+
+        &__divider {
+          color: white !important;
+        }
+
+        &__linkToSignUp {
+          color: white;
+          font-size: 1.5em;
+          &__signUp {
+            color: white;
+          }
+        }
+      }
+    }
+    [title="Username"] {
+      color: white !important;
+    }
+
+    [title="Password"] {
+      color: white !important;
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .login {
+    &__form {
+      &__container {
+        &__linkToSignUp {
+          font-size: 1em;
+        }
+      }
+    }
   }
 }
