--- a/src/pages/signUp/SignUp.scss
+++ b/src/pages/signUp/SignUp.scss
@@ -86,3 +86,30 @@
     }
   }
 }
+
+
+@media only screen and (max-width: 990px) {
+  .signUp {
+    &__side-bar {
+      position: relative;
+      filter: blur(7px);
+    }
+    &__form {
+      position: absolute;
+      top: 1%;
+      width: 100%;
+    }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .signUp {
+   &__form {
+    padding: 0 2em;
+   }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  
+}
