--- a/src/component/layout-creator/LayoutLeft.scss
+++ b/src/component/layout-creator/LayoutLeft.scss
@@ -9,6 +9,7 @@
   justify-content: flex-start;
   flex-direction: column;
   &--img {
+    margin-top: 25px;
     width: 50px;
     width: 50px;
   }
