--- a/src/component/changeTabCreator/ChangeTabCreator.scss
+++ b/src/component/changeTabCreator/ChangeTabCreator.scss
@@ -1,20 +1,23 @@
 .change-tab-creator {
-  position: sticky;
-  top: 0;
-  background-color: white;
+  position: absolute;
+
+  bottom: 0em;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.418);
+  left: 47%;
+  background: linear-gradient(180deg, #2e2e2e 0%, rgba(79, 79, 79, 0.9) 100%);
   z-index: 1;
   font-family: "SemiBoldMonaSans";
-  border-bottom: 1px solid rgba(213, 213, 213, 0.487);
-  padding: 2em;
+  padding: 2em 4em;
+  border-radius: 10px 10px 0 0;
   &__work,
   &__liked,
-  &__collections,
-  &__about {
-    color: black;
+  &__collections {
+    color: rgb(255, 255, 255);
     padding: 0.7em 1em;
     border-radius: 100px;
   }
   .active {
-    background-color: rgba(221, 220, 219, 0.356);
+    color: black;
+    background-color: rgb(255, 255, 255);
   }
 }
