--- a/src/pages/forgotPassword/ForgotPassword.scss
+++ b/src/pages/forgotPassword/ForgotPassword.scss
@@ -1,4 +1,4 @@
-.login {
+.forgot {
   overflow-y: hidden;
   display: flex;
   height: 100vh;
@@ -23,25 +23,13 @@
         font-size: 1.7em;
         margin-bottom: 1.2em;
       }
-      &__gg-btn {
-        width: 100%;
-        border-radius: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: "SemiBoldMonaSans";
-        padding: 27px;
-        border: 1.8px solid rgb(231, 231, 231);
-        img {
-          height: 1.1em;
-          padding-right: 10px;
-        }
+      p {
+        margin: 1.5em 0;
+        width: 33vw;
       }
-      &__divider {
-        font-family: "RegularMonaSans";
-      }
-      &__namepass {
-        margin-bottom: 2em;
+
+      &__email {
+        margin: 3em 0;
         &__group-form {
           &__label {
             font-family: "BoldMonaSans";
@@ -49,12 +37,13 @@
           }
           &__input {
             margin-top: 0.5em;
+            width: 33vw;
             height: 4em !important;
             border-radius: 12px;
           }
         }
         &__submit {
-          width: 100%;
+          width: min-content;
           border-radius: 100px;
           background-color: #0d0c22;
           color: white;
@@ -62,7 +51,7 @@
           justify-content: center;
           align-items: center;
           font-family: "SemiBoldMonaSans";
-          padding: 27px;
+          padding: 25px;
           border: 1.8px solid rgb(231, 231, 231);
         }
       }
@@ -80,20 +69,9 @@
     }
   }
 }
-.ant-form-item-required{
-  width: 100%;
-}
-label.ant-form-item-required {
-  font-family: BoldMonaSans;
-  font-size: 1.1em;
-  &:before {
-    display: none !important;
-  }
-}
 
 @media only screen and (max-width: 1004px) {
-  .login {
-  
+  .forgot {
     &__side-bar {
       position: relative;
       filter: blur(5px);
@@ -109,42 +87,45 @@ label.ant-form-item-required {
           color: white;
         }
 
+        p {
+          color: white;
+        }
         &__divider {
           color: white !important;
         }
-        &__namepass{
+        &__email {
           &__group-form {
-            p{
-              color:white;
-            }}
-        }
-
-        &__linkToSignUp {
-          color: white;
-          font-size: 1.5em;
-          &__signUp {
-            color: white;
+            p {
+              color: white;
+            }
           }
         }
+
       }
     }
-    [title="Username"] {
-      color: white !important;
-    }
-
-    [title="Password"] {
+    [title="Email Address"] {
       color: white !important;
     }
   }
 }
 
-@media only screen and (max-width: 400px) {
-  .login {
+
+@media only screen and (max-width: 650px) {
+  .forgot {
     &__form {
       &__container {
-        &__linkToSignUp {
-          font-size: 1em;
+        p {
+          width: 100%;
         }
+
+        &__email {
+            &__group-form {
+                &__input {
+                    width: 100%;
+                }
+            }
+        }
+        
       }
     }
   }
