--- a/src/component/chatList/ChatList.scss
+++ b/src/component/chatList/ChatList.scss
@@ -1,12 +1,15 @@
 .chat-list {
-  background-color: #202020;
+//   background-color: #202020;
+// color: #fff;
+
   height: 100%;
+//   width: 23.5%;
   width: 300px;
   padding: 20px 0px;
   display: flex;
   flex-direction: column;
-  color: #fff;
   
+
   &__information {
     display: flex;
     align-items: center;
@@ -43,6 +46,9 @@
     overflow-y: scroll;
     // padding: 0px 25px;
     overflow-x: hidden;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
     &::-webkit-scrollbar {
       width: 3px;
       /* Độ rộng của thanh cuộn */
@@ -102,5 +108,35 @@
     //   }
     // }
   }
+}
+
+@media only  screen and (max-width: 1050px) {
+    .chat-list{
+        width: 100px;
+        padding-top: 0px;
+        &__information{
+            justify-content: center;
+            margin-bottom: 0px;
+            padding: 30px;
+            // border: #b2b2b2 1px solid;
+
+            &__left{
+               display: none;
+            }
+        }
+        h3{
+            display: none;
+        }
+        &__items{
+            .item {
+                &__detail{
+                    display: none;
+                }
+                img {
+                    margin-right: 0px;
+                }
+            }
+        }
+    }
 }
 
