--- a/src/component/message/Message.scss
+++ b/src/component/message/Message.scss
@@ -1,14 +1,18 @@
 .message {
+    color: #fff;
+
     &__detail {
-      width: 45%;
-      margin: 5px 0;
-      padding: 20px;
+      width: 60%;
+    //   margin: 5px 0;
+      padding: 20px 0px 0px 20px;
       display: flex;
       align-items: center;
 
       &__avatar {
         img {
-          width: 30px;
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
         }
         margin-right: 10px;
       }
@@ -26,13 +30,38 @@
     &.me {
       display: flex;
       justify-content: end;
+    
+
 
       .message__detail {
+        padding: 20px 20px 0px 0px;
+
         flex-direction: row-reverse;
         &__avatar {
-          margin-left: 20px;
+          margin-left: 10px;
           margin-right: 0;
         }
+        &__text{
+            background-color: rgb(55, 151, 240);
+        }
       }
+    }
+  }
+
+  @media only screen and (max-width: 1100px) {
+    .message{
+        &__detail{
+            width: 80%;
+        }
+        
+    }
+  }
+
+  @media only screen and (max-width: 680px) {
+    .message{
+        &__detail{
+            width: 90%;
+        }
+        
     }
   }
