--- a/src/pages/addArtWork/FormArtWork.scss
+++ b/src/pages/addArtWork/FormArtWork.scss
@@ -1,20 +1,49 @@
 .FormArtWork {
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
   height: 100vh;
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-
+  flex-direction: row-reverse;
+  width: 100%;
   h3 {
     text-align: center;
+    font-size: 20px;
   }
   &--overlay {
-    // background-color: red;
+    border-radius: 40px;
+    padding: 20px;
   }
-  //   background-color: black;
+  &--image {
+    width: 40%;
+    .ant-image {
+      height: 400px !important;
+      width: 100% !important;
+      .ant-image-img {
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
   //   color: white;
+}
+
+@media only screen and (max-width: 546px) {
+  .FormArtWork {
+    flex-direction: row;
+    height: fit-content;
+    margin-top: 33%;
+    &--image {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .ant-image {
+        display: none;
+      }
+    }
+  }
 }
