--- a/src/pages/addArtWork/FormArtWork.scss
+++ b/src/pages/addArtWork/FormArtWork.scss
@@ -16,6 +16,7 @@
   &--overlay {
     border-radius: 40px;
     padding: 20px;
+    // width: 100%;
   }
   &--image {
     width: 40%;
@@ -35,6 +36,10 @@
   .FormArtWork {
     flex-direction: row;
     height: fit-content;
+    &--overlay {
+      padding: 0;
+      margin-top: 30px;
+    }
     &--image {
       width: 100%;
       display: flex;
