--- a/src/pages/addArtWork/FormArtWork.scss
+++ b/src/pages/addArtWork/FormArtWork.scss
@@ -30,6 +30,9 @@
   }
   //   color: white;
 }
+label.ant-form-item-required{
+  color: #b5b3b3 !important;
+}
 
 @media only screen and (max-width: 546px) {
   .FormArtWork {
