add font family

--- a/src/pages/addArtWork/FormArtWork.scss
+++ b/src/pages/addArtWork/FormArtWork.scss
@@ -32,7 +32,12 @@
   //   color: white;
 }
 label.ant-form-item-required{
-  color: #b5b3b3 !important;
+  color: #afadad !important;
+}
+label{
+  color: rgb(167, 165, 165) !important;
+  font-size: 25px;
+  font-weight: 700;
 }
 
 @media only screen and (max-width: 546px) {
