--- a/src/pages/RoomChat/RoomChat.scss
+++ b/src/pages/RoomChat/RoomChat.scss
@@ -2,6 +2,6 @@
 display: flex;
 height: 100%;
 flex-grow: 1;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+font-family: "MediumCereal";
 }
 
