--- a/src/component/UploadArtWork/wrapUpload.scss
+++ b/src/component/UploadArtWork/wrapUpload.scss
@@ -2,5 +2,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 10px;
+}
+
+@media only screen and (max-width: 546px) {
+  .wrapUpload {
+    margin-top: 0;
+    margin-bottom: 90px;
+  }
 }
