--- a/src/component/tags/Tag.scss
+++ b/src/component/tags/Tag.scss
@@ -10,10 +10,11 @@
 .tag-selected {
   width: 100%;
   margin-bottom: 20px;
-  border: 1px solid rgb(214, 206, 206);
-  padding: 20px;
   border-radius: 9px;
   display: flex;
+  border: 1px solid rgb(179, 97, 97);
+  padding: 20px;
+  background-color: white;
 }
 .ant-space {
   display: flex;
@@ -24,5 +25,10 @@
     display: inline-block;
     margin-right: 8px;
     margin-bottom: 8px;
+  }
+}
+@media only screen and (max-width: 546px) {
+  .ant-space {
+    width: fit-content;
   }
 }
