--- a/src/component/layout-creator/LayoutLeft.scss
+++ b/src/component/layout-creator/LayoutLeft.scss
@@ -19,19 +19,29 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+    align-items: center;
+    width: 100%;
+    > * {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 9px;
+    }
     svg {
       color: white;
       font-size: 30px;
     }
-    &__icon {
+    &__addArtwork {
+      svg {
+        font-size: 35px;
+      }
     }
     &__avt {
-      width: 30px;
-      height: 30px;
+      padding: 9px;
       img {
         border-radius: 50%;
-        width: 100%;
-        height: 100%;
+        width: 34 px;
+        height: 34px;
       }
     }
   }
@@ -43,7 +53,10 @@
     cursor: pointer;
   }
 }
-
+.active_state {
+  background-color: #ddd;
+  width: 100%;
+}
 @media only screen and (max-width: 550px) {
   .layoutLeft {
     padding: 0 20px;
@@ -55,6 +68,20 @@
       flex-direction: row;
       align-items: center;
       margin: 0;
+      gap: 33px;
+      > * {
+        svg {
+          font-size: 20px;
+        }
+      }
+      &__avt {
+        padding: 9px;
+        img {
+          border-radius: 50%;
+          width: 25px;
+          height: 25px;
+        }
+      }
     }
     &--img {
       display: none;
