--- a/src/component/UploadArtWork/wrapUpload.scss
+++ b/src/component/UploadArtWork/wrapUpload.scss
@@ -7,7 +7,6 @@
 
 @media only screen and (max-width: 546px) {
   .wrapUpload {
-    margin-top: 0;
-    margin-bottom: 90px;
+    margin-top: 30px;
   }
 }
