--- a/src/pages/addArtWork/FormArtWork.scss
+++ b/src/pages/addArtWork/FormArtWork.scss
@@ -41,6 +41,8 @@
 
 @media only screen and (max-width: 800px) {
   .FormArtWork {
+    flex-direction: column-reverse;
+
     &--image {
       .ant-image {
         display: none;
@@ -50,7 +52,6 @@
 }
 @media only screen and (max-width: 546px) {
   .FormArtWork {
-    flex-direction: row;
     &--overlay {
       padding: 0;
       margin-top: 30px;
