--- a/src/component/roomMessage/RoomMessage.scss
+++ b/src/component/roomMessage/RoomMessage.scss
@@ -17,6 +17,9 @@
       &:hover {
         background-color: #545454;
       }
+      &.active{
+        background-color: #545454;
+      }
 
       img {
         width: 40px;
