fix color upload background

--- a/src/component/UploadArtWork/wrapUpload.scss
+++ b/src/component/UploadArtWork/wrapUpload.scss
@@ -25,10 +25,12 @@ div.ant-tooltip.css-dev-only-do-not-override-1qhpsh8.ant-tooltip-placement-top{
 }
 
 div.ant-image.css-dev-only-do-not-override-1qhpsh8{
-  border: rgb(75, 215, 246) 1px solid;
-
-  margin-top: 10px;
+  border: #b42d81 1px solid;
 }
+div.ant-image.css-1qhpsh8{
+  border: #b42d81 1px solid;
+}
+
 
 @media only screen and (max-width: 546px) {
   .wrapUpload {
