--- a/src/component/ArtworkInfo/ArtworkInfo.scss
+++ b/src/component/ArtworkInfo/ArtworkInfo.scss
@@ -1,23 +1,25 @@
 .artworkInfo {
-  &--contentt {
-    p {
-      margin: 10px 0;
-      margin-bottom: 20px;
-      font-family: "LightCereal";
-    }
-    h2 {
-      font-family: "MediumCereal";
+  &--back {
+    svg {
+      font-size: 25px;
+      cursor: pointer;
     }
   }
+
   &--img {
     // height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     &__image {
-      width: 70%;
-      height: 60%;
+      width: 90%;
+      height: 90%;
+      .ant-image {
+        width: 100% !important;
+        height: 100% !important;
+      }
       img {
+        object-fit: cover;
         width: 100%;
         height: 100%;
       }
