--- a/src/component/ListFeedback/ListFeedback.scss
+++ b/src/component/ListFeedback/ListFeedback.scss
@@ -1,6 +1,38 @@
 .listFeedback {
   height: 100vh;
   border-left: 1px solid #e9e9e9;
+  &--contentt {
+    padding: 10px;
+    p {
+      margin: 10px 0;
+      margin-bottom: 20px;
+      font-family: "LightCereal";
+      font-size: 13px;
+    }
+    h2 {
+      font-family: "MediumCereal";
+      font-size: 20px;
+    }
+  }
+  .item.active {
+    padding: 10px;
+
+    background-color: white;
+    justify-content: unset;
+    h4 {
+      color: hsl(0, 0%, 24%);
+    }
+    span {
+      color: hsl(102, 39%, 50%);
+      display: flex;
+      align-items: center;
+      svg {
+        margin-right: 5px;
+        background-color: hsl(102, 39%, 50%);
+        border-radius: 50%;
+      }
+    }
+  }
   h1 {
     font-size: 20px;
     margin-left: 20px;
@@ -10,7 +42,7 @@
   &--interact {
     font-family: "LightCereal";
     display: flex;
-    margin: 20px;
+    padding: 10px;
     gap: 15px;
     font-size: 15px;
     > * {
@@ -26,7 +58,7 @@
   }
   &--comments {
     overflow-y: scroll;
-    height: 550px;
+    height: 455px;
     border-top: 1px solid #e9e9e9;
     -ms-overflow-style: none;
     scrollbar-width: none;
